--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@react-google-maps/api": "^2.20.6",
     "@reduxjs/toolkit": "^2.6.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^12.15.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "react-toastify": "^10.0.6"
