--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "@react-google-maps/api": "^2.20.6",
+    "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.6.1",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
@@ -20,6 +20,7 @@
     "framer-motion": "^12.15.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
+    "react-calendar": "^6.0.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
